fixed margin on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -426,6 +426,7 @@ section {
 
   .main-content {
     width: 100%;
+    margin-top: 0px;
   }
 
   .sidebar-footer {
